2004-05-27  Dominique Devriese  <devriese@kde.org>

	* Fix so that Kig saves its window settings on exit.

2004-05-23  Dominique Devriese  <devriese@kde.org>

	* replace the custom configureShortcuts code with the standard KDE
	one if the user is running HEAD.

2004-05-18  Pino Toscano <toscano.pino@tiscali.it>

	* Move ArcBTPType from other_type.* into arc_type.*.

	* Add two new types, ArcBCPA ( Arc By Center, starting Point and
	Angle ) and CircleBCL ( Circle By Center and Line - via macro ).

	* Now every submenu in the RMB menu can have an own icon.

	* Add a menu icon for every ExportAction.

	* Various little improvements

04-05-18  Dominique Devriese  <devriese@kde.org>

	* Add a --convert-to-native command line option, which converts
	the given file to the native Kig file format ( without a GUI ).

	* Split up KigDocument into KigPart and KigDocument

2004-05-15  Dominique Devriese  <devriese@kde.org>

	* Intersecting with a segment only gives points that really are on
	the segment, and an InvalidImp in other cases.

2004-05-12  Pino Toscano <toscano.pino@tiscali.it>

	* Now circles can display their equation in the form
	"( x - x0 )^2 + ( y - y0 )^2 = r^2".

	* Add Doxygen comments for AngleImp, VectorImp and ArcImp
	classes, to make them documented in scripting-api documentation.

	* Add a Copy action to text labels to copy their text ( with
	substitutions already made ) into the clipboard.

	* Add two little kfile plugins: kfile_kig and kfile_drgeo.

	* Various little improvements

2004-05-11  Dominique Devriese  <devriese@kde.org>

	* Rename the two Transformation::scaling functions to
	scalingOverPoint and scalingOverLine, and export them to python.

	* Fix a crash reported by Maurizio: when debugging is enabled, and
	one attempts to move an object of a type that inherits
	ObjectABType, and depends on a non-movable object.

2004-05-03  Dominique Devriese  <devriese@kde.org>

	* Add a DrGeo test file using a locus
