@@ -132,6 +132,7 @@
       <Action name="objects_new_arecollinear" />
       <Action name="objects_new_containstest" />
       <Action name="objects_new_distancetest" />
+      <Action name="objects_new_vectorequalitytest" />
     </Menu>
     <Menu name="types">
       <text>&amp;Types</text>
@@ -222,11 +223,12 @@
   </ToolBar>
   <ToolBar name="tests_toolbar" position="right">
     <text>Tests</text>
-      <Action name="objects_new_areparallel" />
-      <Action name="objects_new_areorthogonal" />
-      <Action name="objects_new_arecollinear" />
-      <Action name="objects_new_containstest" />
-      <Action name="objects_new_distancetest" />
+    <Action name="objects_new_areparallel" />
+    <Action name="objects_new_areorthogonal" />
+    <Action name="objects_new_arecollinear" />
+    <Action name="objects_new_containstest" />
+    <Action name="objects_new_distancetest" />
+    <Action name="objects_new_vectorequalitytest" />
   </ToolBar>
   <ToolBar name="rest_toolbar" position="left">
     <text>Other Objects</text>
