@@ -1,3 +1,7 @@
+2004-05-28  Dominique Devriese  <devriese@kde.org>
+
+	* Add a VectorEqualityTestType.
+
 2004-05-27  Dominique Devriese  <devriese@kde.org>
 
 	* Fix so that Kig saves its window settings on exit.
